src/tests/routes/me/snapshots/integration__routes__me__get__me-4.snap
---
source: src/tests/routes/me/get.rs
expression: response.json()
---
{
  "owned_crates": [],
  "user": {
    "avatar": "http://example.com/icon-the-first.png",
    "created_at": "[datetime]",
    "email": "foo@example.com",
    "email_verification_sent": true,
    "email_verified": true,
    "id": 1,
    "is_admin": false,
    "login": "foo",
    "name": null,
    "publish_notifications": true,
    "url": "https://github.com/foo"
  }
}
